--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "node-sass": "^7.0.1",
+    "paginate": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.1.3",
+    "react-player": "^2.10.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-video-js-player": "^1.1.1",
+    "screenfull": "^6.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
